--- a/AUTHORS
+++ b/AUTHORS
@@ -1,6 +1,7 @@
 # This file lists all individuals having contributed content to the repository.
 
-
+Adam Clear <3589@holbertonschool.com>
+Kaylee Dao <3597@holbertonschool.com>
 Jennifer Huang <133@holbertonschool.com>
 Alexa Orrico <210@holbertonschool.com>
 Joann Vuong <130@holbertonschool.com> 
